# hironx_tutorials

./: CMakeLists.txt  LICENSE  README.md  docker-compose.yaml  package.xml
catkin_ws/src/hironx_tutorials/: CMakeLists.txt  package.xml
catkin_ws/src/hironx_tutorials/launch/: move_arms.launch
catkin_ws/src/hironx_tutorials/scripts/: head_banging.py  move_arms.py  turn_waist.py
docker/: Dockerfile
hironx-extend/: README.md
hironx-extend/hironx_description/: CMakeLists.txt  package.xml
hironx-extend/hironx_description/meshes/: HEAD_JOINT1_new_Link_mesh.dae  LARM_JOINT5_NoHand_Link_mesh.dae  LARM_JOINT5_NoHand_Link_mesh1.dae  RARM_JOINT5_NoHand_Link_mesh.dae  WAIST_Link_mesh.dae
hironx-extend/hironx_description/model_original/: HiroNX.urdf
hironx-extend/hironx_description/urdf/: HiroNX.xacro  HiroNX_handless.urdf.xacro
hironx-extend/hironx_handless_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
hironx-extend/hironx_handless_moveit_config/config/: HiroNX.srdf  joint_limits.yaml  kinematics.yaml
hironx-extend/hironx_handless_moveit_config/launch/: HiroNX_moveit_controller_manager.launch.xml  default_warehouse_db.launch  demo.launch  move_group.launch  moveit_planning_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
launch/: head_banging.launch  move_arms.launch  turn_waist.launch  wave_arms.launch
msg/: Pos.msg  State.msg
scripts/: head_banging.py  hiro_head_banging.py  hiro_sample.py  hiro_turn_waist.py  move_arms.py  turn_waist.py  wave_arms.py
