<?xml version="1.0"?>
<package format="2">
  <name>hironx_stack</name>
  <version>0.0.0</version>
  <description>ROS Kinetic metapackage for the KAWADA HIRO-NX.</description>

  <maintainer email="taku8926@gmail.com">takuya-ki</maintainer>
  <license>BSD</license>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
