<?xml version="1.0"?>
<package format="2">
  <name>hironx_tutorials</name>
  <version>0.0.0</version>
  <description>ROS Kinetic metapackage for the KAWADA HIRO-NX.</description>
  <maintainer email="taku8926@gmail.com">takuya-ki</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning_interface</depend>
</package>
